# RGB2GIF2VOXEL

./: .gitignore  .swiftlint.yml  .xcodeignore  .xcodeprojignore  ALGORITHM_IMPROVEMENTS.md  ARCHITECTURE_PLAN.md  BUILD_AND_RUN.sh  BUILD_ERROR_FIXES.md  BUILD_FIXES_COMPLETE.md  BUILD_FIX_SUMMARY.md  BUILD_WITH_RUST.sh  COMPLETE_FIX_SUMMARY.md  CameraPreviewView.swift  DOCUMENTATION.md  DUPLICATE_TYPES_FIXED.md  ExportOptions.plist  FIXES_COMPLETE.md  GIF_QUALITY_ENHANCEMENT_OPTIONS.md  IPHONE17_PRO_OPTIMIZATIONS.md  N128_IMPLEMENTATION_COMPLETE.md  Package.resolved  Package.swift  README.md  README_COMPLETE.md  RGB2GIF2VOXEL.xcconfig  START_MONITORING.sh  TYPE_SYSTEM_UNIFIED.md  UI_UX_RESTORATION_PLAN.md  VOXEL_CUBE_ARCHITECTURE.md  VOXEL_CUBE_FINAL_REPORT.md  VOXEL_RENDERING_SUCCESS.md  architecture-v2.yaml  architecture-v3-bgra.yaml  architecture-v4-256cube.yaml  build_and_test.sh  build_clean.sh  build_complete.sh  build_log.txt  build_stable.sh  build_xcframeworks.sh  (+29 more)
CStubs/: stub_all_symbols.c
RGB2GIF2VOXEL/: ContentView.swift  Info.plist  RGB2GIF2VOXEL-Bridging-Header.h  RGB2GIF2VOXELApp.swift  TestPipeline.swift
RGB2GIF2VOXEL.xcframework/: Info.plist
RGB2GIF2VOXEL.xcodeproj/: project.pbxproj  project.pbxproj.backup2  project.pbxproj.backup4  project.pbxproj.backup_final  project.pbxproj.backup_infoplist_fix  project.pbxproj.corrupted
RGB2GIF2VOXELTests/: CameraValidationTests.swift  CompletePipelineTests.swift  ContractTests.swift  CubeStackTests.swift  FFIOptionsBuilderTests.swift  PerformanceBenchmarks.swift  RealisticBenchmarks.swift  RustFFITests.swift
RustCore.xcframework/: Info.plist
Scripts/: Cargo.toml  add_xcframework.sh  benchmark_pipeline.sh  build_and_deploy.sh  build_and_test.sh  build_hygiene.sh  build_rust_ffi.sh  build_rust_library.sh  check_build_hygiene.sh  cleanup_excluded_files.sh  fix_build_settings.sh  fix_infoplist_conflict.sh  fix_infoplist_final.sh  generate_swift_bindings.sh  monitor_device_logs.sh  validate_build.sh  validate_symbols.sh  verify_build_config.sh  verify_implementation.sh  verify_infoplist_fix.sh
_archived_duplicates/: CubeCameraManager.swift  Downsampler.swift  (+1 more)
rust-core/: Cargo.toml  Cargo.toml.kornia  build-ios.sh  build.rs  build_ios.sh  cbindgen.toml  create_xcframework.sh  test_rust_works.sh
rust-core/include/: yingif_ffi.h
rust-core/src/: batch_ffi.rs  blue_noise.rs  ffi_impl.rs  gif_encoder.rs  kornia_processor.rs  lib.rs  lib.udl  oklab_quantization.rs  parallel.rs  processing.rs  quantization.rs  rgb2gif.udl  tensor.rs  tests.rs
rust-core/tests/: acceptance_tests.rs  integration.rs
rust-ios-ffi/: Cargo.toml  build.rs  build_ios.sh
rust-ios-ffi/src/: lib.rs
yinvxl-rs/: Cargo.toml
yinvxl-rs/src/: lib.rs
(+138 files in other folders)
