[package]
name = "yinvxl"
version = "0.1.0"
edition = "2021"
authors = ["Daniel"]
description = "YinVoxel (YXV) format reader/writer for N×N×N voxel data"
license = "MIT"

[dependencies]
flatbuffers = "23.5"
lz4 = "1.24"
crc32fast = "1.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
byteorder = "1.5"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
lzfse = "0.1"  # Apple's compression algorithm

[target.'cfg(target_os = "windows")'.dependencies]
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
zstd = "0.13"

[build-dependencies]
flatc-rust = "0.2"  # For generating Rust code from .fbs

[lib]
name = "yinvxl"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "yxv"
path = "src/bin/yxv.rs"

[features]
default = ["cli"]
cli = []
ffi = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3